fix: overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,10 +18,12 @@ body {
 }
 
 .sudoku__cell {
-    font-size: 10px;
+    font-size: 50px;
     display: flex;
     justify-content: space-around;
     align-items: center;
+
+    overflow: hidden;
 
     flex-basis: 10%;
     flex-grow: 1;
@@ -54,7 +56,10 @@ body {
 }
 
 .sudoku__row {
+    flex-basis: 10%;
     display: flex;
     flex-grow: 1;
+
+    overflow: hidden;
 }
 
